--- a/styles/countdownStyle.module.scss
+++ b/styles/countdownStyle.module.scss
@@ -17,8 +17,11 @@
     left: 50px;
     // decrease margin, font size, and spacing for mobile
     @media (max-width: 768px) {
-        top: 33px;
-        left: 30px;
+        position: relative; 
+        top: auto;
+        left: auto;
+        width: 100%; 
+        text-align: center; 
         font-size: 11px;
         letter-spacing: 2.2px;
     }
